# raucle-bench

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  weekly-run.yml
datasets/: README.md  benign.jsonl  data_exfiltration.jsonl  direct_injection.jsonl  evasion.jsonl  indirect_injection.jsonl  jailbreak.jsonl  tool_abuse.jsonl
results/: 2026-05-14-v0.1-baseline.md  2026-05-25T10-21-16Z.html  2026-05-25T10-21-16Z.json  2026-05-25T10-21-16Z.md  2026-06-01T11-47-02Z.html  2026-06-01T11-47-02Z.json  2026-06-01T11-47-02Z.md  2026-06-08T11-08-30Z.html  2026-06-08T11-08-30Z.json  2026-06-08T11-08-30Z.md  2026-06-15T12-28-43Z.html  2026-06-15T12-28-43Z.json  2026-06-15T12-28-43Z.md  2026-06-22T12-15-44Z.html  2026-06-22T12-15-44Z.json  2026-06-22T12-15-44Z.md  2026-06-29T11-10-52Z.html  2026-06-29T11-10-52Z.json  2026-06-29T11-10-52Z.md  latest.html  latest.json
src/raucle_bench/: __init__.py  adapter.py  cli.py  dataset.py  report.py  runner.py  scoring.py
src/raucle_bench/adapters/: baseline.py  llm_guard.py  raucle.py
tests/: test_adapter_contract.py  test_dataset.py  test_report.py  test_runner.py  test_scoring.py
